# Qlist

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  helpers.go  log.go  plist.go  qlist.go
src/: CMakeLists.txt  Info.plist  base64.h  qlist.cpp  sample.xpm
widgets/: entry.go  text.go
